<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/for_layout">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:text="@string/order_title_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/title_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_text"
            android:layout_marginTop="20dp"
            android:text="@string/order_date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_name"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/date_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tracking_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title_text"
            android:layout_marginTop="97dp"
            android:text="@string/tracking_number_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/order_tracking_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_date"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="23dp"
            android:layout_toRightOf="@id/tracking_number_text"
            android:textSize="20sp" />
    </RelativeLayout>







    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/goods_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="产品数量:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_goods_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dp"
            android:layout_toRightOf="@id/goods_count_text" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/order_finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/order_is_finished_label" />
</LinearLayout>